# swarmchat

./: .gitignore  INSTALL.md  README.md  check_yaml.py  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
docs/: PACKAGING.md
public/: index.html
releases/: SwarmChat-0.1.6-setup.msi
scripts/: ci-copy-sidecar.ps1  ci-copy-sidecar.sh  rebuild-dendrite.ps1  rebuild-dendrite.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AuthForm.tsx  BlockManager.tsx  ChatDemo.tsx  LogViewer.tsx  NodeControl.tsx
src/hooks/: useConnectionMonitor.ts  useMatrixClient.ts
src/types/: shims.d.ts
src/utils/: badWords.ts  blockList.ts
web-client-examples/: README.md
web-client-examples/react/: LogViewer.tsx  NodeControl.README.md  NodeControl.tsx  README.md
web-client-examples/vanilla/: index.html
