[package]
name = "swarmchat-tauri"
version = "0.1.0"
edition = "2021"
authors = ["SwarmChat"]
description = "Tauri sidecar host for SwarmChat"

[dependencies]
tauri = { version = "^2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = "^2"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
